--- a/SpringBoard/appsettings.json
+++ b/SpringBoard/appsettings.json
@@ -10,5 +10,13 @@
     "ValidAudience": "http://localhost:4200",
     "ValidIssuer": "http://localhost:7064",
     "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
-  }
+  },
+
+  "MailSettings": {
+    "Mail": "trizouni1@gmail.com",
+    "DisplayName": "springboard",
+    "Password": "hbwvrjzdgfrlgegd",
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  },
 }
