--- a/SpringBoard.Service/SpringBoard.Service.csproj
+++ b/SpringBoard.Service/SpringBoard.Service.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.23" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.23" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SpringBoard.Data\SpringBoard.Data.csproj" />
     <ProjectReference Include="..\SpringBoard.Domain\SpringBoard.Domain.csproj" />
   </ItemGroup>
